# SDWebLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  image_resource.qrc  modify_cmake.sh  update_submodules.sh
src/: AppInfo.cpp  AppInfo.h  main.cpp
src/example/: backend.h
src/hard_info/: hard_info.cpp  hard_info.h
src/qml/: main.qml  qml_resource.qrc
src/qml/component/: CustomWindow.qml
src/qml/navigation_bar/: ItemsFooter.qml  ItemsView.qml
src/qml/window/: CmdWindow.qml  HomePage.qml  MainWindow.qml
src/test/: backend.cpp
src/tool/: IPC.cpp
src/tool/pc_manager/: pc_manager.cpp  pc_manager.h
src/tools/ipc/: IPC.cpp
src/tools/language/: En.h  Lang.h  Zh.h
src/webui_control/: webui_control.cpp  webui_control.h
